tests/ui/rust-2024/unsafe-extern-blocks/extern-items-unsafe.edition2021.stderr
error[E0133]: call to unsafe function `test1` is unsafe and requires unsafe function or block
  --> $DIR/extern-items-unsafe.rs:11:5
   |
LL |     test1(TEST1);
   |     ^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/extern-items-unsafe.rs:11:11
   |
LL |     test1(TEST1);
   |           ^^^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
